Fixing background image resizing on mobile browsers when top and bottom menus open and collapse.

--- a/assets/styles/css/grass.css
+++ b/assets/styles/css/grass.css
@@ -4,11 +4,22 @@
 }
 
 #grass-page {
+    position: relative;
+    min-height: 100vh;
+    overflow: hidden;
+}
+
+.background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url(../../images/grass/seed.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
     background-size: cover;
+    z-index: -1;
 }
 
 .collage-header {
